--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+grpcio==1.38.1
+grpcio-tools==1.38.1
+protobuf==3.18.1
+numpy==1.23.5
+sounddevice==0.4.5
 setuptools==50.3.2
 grpcio==1.43.0
 grpcio-tools==1.43.0
 grpcio-health-checking==1.43.0
 google-api-core==1.27.0
-protobuf==3.18.1
 gapic-google-cloud-speech-v1==0.15.3
 grpc-google-cloud-speech-v1==0.8.1
 proto-google-cloud-speech-v1==0.15.3
@@ -16,3 +20,10 @@ httplib2==0.14.0
 oauth2client==2.0.0
 pydub==0.23.1
 pyaudio==0.2.12
+PyQt5==5.15.7
+EasyNMT==2.0.2
+sentencepiece==0.1.97
+simpleaudio==1.0.4
+scipy==1.9.3
+librosa==0.9.2
+pywhisper==1.0.6
